# transaction-service/src/main/java/com/example/transactionservice/controller/TransactionController.java
@@ -11,6 +11,8 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
 
+import java.util.UUID;
+
 @RestController
 @RequiredArgsConstructor
 public class TransactionController implements TransactionApiClient {
@@ -20,6 +22,13 @@ public class TransactionController implements TransactionApiClient {
     public ResponseEntity<TransactionInitResponse> initTransaction(String authorization, String type, InitTransactionRequest initTransactionRequest) {
         return ResponseEntity.ok()
                 .body(strategyResolver.resolve(type).init(initTransactionRequest));
+    }
+
+    @Override
+    public ResponseEntity<Void> compensateFailedTransaction(UUID transactionId, String type, String authorization) {
+        strategyResolver.resolve(type).cancelTransaction(transactionId);
+        return ResponseEntity.ok()
+                .build();
     }
 
     @Override
